Database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-app
  labels:
    app: database-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-app
  template:
    metadata:
      labels:
        app: database-app
    spec:
      containers:
      - name: database-container
        image: postgres:13
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database-app
spec:
  type: ClusterIP
  selector:
    app: database-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
