Service.yaml
---
# This YAML file defines a Kubernetes Service resource for the "nginx-app".
# 
# apiVersion: Specifies the API version of the resource. In this case, it is "v1".
# kind: Indicates the type of Kubernetes resource, which is "Service".
# metadata: Contains metadata about the Service, including:
#   - name: The name of the Service, "nginx-app-service".
#   - labels: Key-value pairs used for organizing and selecting resources. Here, it labels the Service with "app: nginx-app".
# spec: Defines the desired state of the Service, including:
#   - type: Specifies the type of Service. "NodePort" exposes the Service on a static port on each node.
#   - selector: Matches Pods with the label "app: nginx-app" to route traffic to them.
#   - ports: Configures the ports for the Service:
#     - protocol: The protocol used, which is "TCP".
#     - port: The port on which the Service is exposed (80).
#     - targetPort: The port on the Pod to which traffic is forwarded (80).
#     - nodePort: The static port on each node where the Service is exposed (32080).
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  labels:
    app: nginx-app
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080
